test/files/neg/t7622-cyclic-dependency/sample_2.scala
//> using options -Xplugin:. -Xplugin-require:cyclicdependency
package sample

// just a sample that is compiled with the sample plugin enabled
object Sample extends App {
}
